# domestic-messenger

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  member.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/entities/: member.rs  message.rs  mod.rs  prelude.rs  room.rs  room_member.rs
db/src/migrator/: m20220101_000001_create_member_table.rs  m20220101_000002_create_message_table.rs  mod.rs
service/: Cargo.toml
service/src/: lib.rs  member.rs  message.rs
