[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
futures = "0.3.30"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "sqlx-sqlite"] }
sea-orm-migration = "0.12.15"
serde = { version = "1.0.203", features = ["derive"] }
